--- a/TopFX.css
+++ b/TopFX.css
@@ -15,8 +15,29 @@
 
 
 .topMenu{
-    background-color: green;
-    float:right;
-    padding-left: 30px;
+      float:right;
+      padding-right: 305px;
 }
 
+.topMenu a{
+    color:black;
+    font-weight: bold;
+    padding:5px;
+}
+h1{
+    text-align: center;
+}
+
+.table, th, tr{
+    text-align:center;
+}
+
+.titloi{
+    text-align: center;
+}
+h2{
+    text-align: center;
+}
+.subtitles2{
+    text-align:center;
+}
