--- a/TopFX.css
+++ b/TopFX.css
@@ -13,6 +13,69 @@
     padding:5px;
 }
 
+.videoContainer{
+    position:relative
+}
+
+.videoTitle{
+    top:100px;
+    left:500px;
+    position: absolute;
+    color:white;
+    font-size:40px;
+}
+
+.videoSubtitle{
+    top:160px;
+    left:500px;
+    position: absolute;
+    color:white;
+    font-size:40px;
+}
+
+.tradeButton button{
+    top:220px;
+    left:500px;
+    position: absolute;
+    color:white;
+    font-size:20px;
+    background-color: #4CAF50;
+}
+
+.container-img{
+    position:relative
+}
+
+.sampleText{
+    top:100px;
+    left:500px;
+    position: absolute;
+    color:white;
+    font-size:40px;
+}
+
+.sampleImage{
+    position: absolute;
+    top:100px;
+    right:500px;
+}
+
+.sampleList{
+    top:200px;
+    left:500px;
+    position: absolute;
+    color:white;
+    font-size:30px;
+
+}
+
+.sampleParagraph{
+    top:160px;
+    left:500px;
+    position: absolute;
+    color:white;
+    font-size:30px;
+}
 
 .topMenu{
       float:right;
